--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
     <head>
         <meta charset="utf-8" />
         <title> Kevin Pietruszka Portfolio </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <base data-trunk-public-url />
+        <link data-trunk rel="sass" href="index.scss" />
+        <link data-trunk rel="rust" />
+        <link
+          rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
+        />
     </head>
     <body></body>
 </html>
