--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title> Kevin Pietruszka Portfolio </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        
+        <title> Kevin Pietruszka Portfolio </title>
+
         <base data-trunk-public-url />
+
+        <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/lux/bulmaswatch.min.css">
         <link data-trunk rel="rust" />
-        <link
-          rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
-        />
+        <link data-trunk rel="scss" href="index.scss" />
     </head>
     <body></body>
 </html>
