--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="has-navbar-fixed-top">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,9 +8,9 @@
 
         <base data-trunk-public-url />
 
-        <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/lux/bulmaswatch.min.css">
         <link data-trunk rel="rust" />
-        <link data-trunk rel="scss" href="index.scss" />
+        <link data-trunk rel="css" href="lux.min.css">
+        <link data-trunk rel="css" href="bulmatimeline.min.css">
     </head>
     <body></body>
 </html>
