Change CSS for more extensions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <link data-trunk rel="rust" />
         <link data-trunk rel="css" href="lux.min.css">
-        <link data-trunk rel="css" href="bulmatimeline.min.css">
+        <link data-trunk rel="css" href="bulmaextensions.min.css">
     </head>
     <body></body>
 </html>
