--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <base data-trunk-public-url />
 
         <link data-trunk rel="rust" />
-        <link data-trunk rel="css" href="lux.min.css">
-        <link data-trunk rel="css" href="bulmaextensions.min.css">
+        <link data-trunk rel="css" href="./static/lux.min.css">
+        <link data-trunk rel="css" href="./static/bulmaextensions.min.css">
     </head>
     <body></body>
 </html>
