add image capability and add home page data

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <base data-trunk-public-url />
 
         <link data-trunk rel="rust" />
+        <link data-trunk rel="copy-dir" href="img">
         <link data-trunk rel="css" href="./static/lux.min.css">
         <link data-trunk rel="css" href="./static/bulmaextensions.min.css">
     </head>
