get icons from font awesome

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link data-trunk rel="copy-dir" href="img">
         <link data-trunk rel="css" href="./static/lux.min.css">
         <link data-trunk rel="css" href="./static/bulmaextensions.min.css">
+        <script src="https://kit.fontawesome.com/48723bb9b2.js" crossorigin="anonymous"></script>
     </head>
     <body></body>
 </html>
